[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "photocopy"
author = "Stavros Korokithakis"
author-email = "hi@stavros.io"
description-file = "README.md"
requires = [
    "docopt >=0.6.2",
    "exifread >=2.1.2",
]
home-page = "https://github.com/skorokithakis/photocopy/"
classifiers = ["License :: OSI Approved :: MIT License"]

[tool.flit.scripts]
photocopy = "photocopy:main"
